# SpringUI

./: CMakeLists.txt  CMakeSettings.json
Include/SPUI/: Core.hpp  Debug.hpp  Shader.hpp
Include/SPUI/Core/: IndexBuffer.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
Include/SPUI/UI/: UIElement.hpp
Shaders/: old.glsl  rectangle.glsl
src/: CMakeLists.txt  Debug.cpp  Renderer.cpp  SpringUI.cpp
src/Core/: IndexBuffer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
src/UI/: UIElement.cpp
